[project]
name = "chatpiano-midi-tool-server"
version = "0.1.0"
description = "Minimal MIDI tool server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "mido>=1.3",
    "uvicorn>=0.28",
]

[project.scripts]
midi-tool-server = "midi_tool_server.server:run"
midi-db-index = "midi_tool_server.index_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
