[project]
name = "chatpiano-midi-tool-server"
version = "0.1.0"
description = "Minimal MIDI tool server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "mido>=1.3.3",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midi_tool_server"]

[tool.uv]
package = true

[project.scripts]
midi-tool-server = "midi_tool_server.server:run"
midi-db-index = "midi_tool_server.index_db:main"
